# ARME-Kalman-Filter-Cpp

./: .gitignore  CMakeLists-no-openblas.txt  CMakeLists.txt  README.md
oldPythonFiles/: RD_optart_results.py  RD_optimise.py  RD_optreal_heatmap_plots.ipynb  RD_optreal_heatmap_plots.py  RD_optreal_results.py
src/: EnsembleFunctions.cpp  EnsembleFunctions.hpp  RD_optart_results.py  RD_optart_results_cpp.py  RD_optimise.py  RD_optimise_cpp.py  RD_optreal_heatmap_plots.py  RD_optreal_heatmap_plots_cpp.py  RD_optreal_results.py  RD_optreal_results_cpp.py  bindings.cpp  main.cpp  test.py
tests/: RD_optart_results_compare.py  RD_optimise_compare.py  RD_optreal_heatmap_plots_compare.py  RD_optreal_results_compare.py  new_test.py  test.py  test_all.py
